--- a/patternLock.css
+++ b/patternLock.css
@@ -1,35 +1,42 @@
 /*
-	patternLock.js v 1.0.1
-	Author: Sudhanshu Yadav
-	Copyright (c) 2016 Sudhanshu Yadav - ignitersworld.com , released under the MIT license.
-	Demo and documentaion on: ignitersworld.com/lab/patternLock.html
+    patternLock.js v 1.1.0
+    Author: Sudhanshu Yadav, Nimiq Foundation
+    Copyright (c) 2015,2016 Sudhanshu Yadav - ignitersworld.com , released under the MIT license.
+    Copyright (c) 2018 Nimiq Foundation - nimiq.com , released under the MIT license.
 */
 
-.patt-holder{background:#3382c0;  -ms-touch-action: none;}
-.patt-wrap{position:relative; cursor:pointer;}
-.patt-wrap ul, .patt-wrap li{
+.patt-holder{
+	-ms-touch-action: none;
+}
+.patt-wrap{
+	position:relative;
+	cursor:pointer;
+}
+.patt-wrap ul, .patt-wrap li {
 	list-style: none;
 	margin:0;
 	padding: 0;
 }
-.patt-circ{
+.patt-circ {
 	position:relative;
 	float: left;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
  }
-.patt-circ.hovered{
-	border:3px solid #009900;
+.patt-circ.hovered {
+	border:3px solid var(--success-color);
 }
 
-.patt-error .patt-circ.hovered{
-	border:3px solid #BA1B26;
+.patt-error .patt-circ.hovered {
+	border:3px solid var(--error-color);
 }
 
-.patt-hidden .patt-circ.hovered{border:0;}
+.patt-hidden .patt-circ.hovered {
+	border:0;
+}
 
-.patt-dots{
-	background: #FFF;
+.patt-dots {
+	background: var(--main-button-background);
 	width: 10px;height: 10px;
 	border-radius:5px;
 	position:absolute;
@@ -38,16 +45,17 @@
 	margin-top:-5px;
 	margin-left:-5px;
 }
-.patt-lines{
+.patt-lines {
 	border-radius:5px;
 	height:10px;
-	background:rgba(255,255,255,.7);
+	background:var(--main-button-background);
+	opacity: 0.3;
 	position:absolute;
 	transform-origin:5px 5px;
 	-ms-transform-origin:5px 5px; /* IE 9 */
 	-webkit-transform-origin:5px 5px;
 }
 
-.patt-hidden .patt-lines{
+.patt-hidden .patt-lines {
 	display:none;
 }
