--- a/patternLock.css
+++ b/patternLock.css
@@ -9,51 +9,52 @@
 	-ms-touch-action: none;
 }
 .patt-wrap{
-	position:relative;
-	cursor:pointer;
+	position: relative;
+	cursor: pointer;
 }
 .patt-wrap ul, .patt-wrap li {
 	list-style: none;
-	margin:0;
+	margin: 0;
 	padding: 0;
 }
 .patt-circ {
-	position:relative;
+	position: relative;
 	float: left;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
  }
 .patt-circ.hovered {
-	border:3px solid var(--success-color);
+	border: 3px solid var(--success-color);
 }
 
 .patt-error .patt-circ.hovered {
-	border:3px solid var(--error-color);
+	border: 3px solid var(--error-color);
 }
 
 .patt-hidden .patt-circ.hovered {
-	border:0;
+	border: 0;
 }
 
 .patt-dots {
 	background: var(--main-button-background);
-	width: 10px;height: 10px;
-	border-radius:5px;
+	width: 10px;
+	height: 10px;
+	border-radius: 5px;
 	position:absolute;
-	top:50%;
-	left:50%;
-	margin-top:-5px;
-	margin-left:-5px;
+	top: 50%;
+	left: 50%;
+	margin-top: -5px;
+	margin-left: -5px;
 }
 .patt-lines {
-	border-radius:5px;
-	height:10px;
-	background:var(--main-button-background);
+	border-radius: 5px;
+	height: 10px;
+	background: var(--main-button-background);
 	opacity: 0.3;
-	position:absolute;
-	transform-origin:5px 5px;
-	-ms-transform-origin:5px 5px; /* IE 9 */
-	-webkit-transform-origin:5px 5px;
+	position: absolute;
+	transform-origin: 5px 5px;
+	-ms-transform-origin: 5px 5px; /* IE 9 */
+	-webkit-transform-origin: 5px 5px;
 }
 
 .patt-hidden .patt-lines {
